@@ -1,40 +1,36 @@
 package com.example.demo.security;
 
 import com.example.demo.model.User;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
+import org.springframework.security.core.GrantedAuthority;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class CustomUserDetails implements UserDetails {
 
-    private String username;
-    private String password;
-    private String role;
-
-    public CustomUserDetails() {}
+    private final User user;
 
     public CustomUserDetails(User user){
-        this.username = user.getEmail();
-        this.password = user.getPassword();
-        this.role = user.getRole();
+        this.user = user;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role));
+        return Collections.emptyList();
     }
 
     @Override
-    public String getPassword() { return password; }
+    public String getPassword() {
+        return user.getPassword();
+    }
 
     @Override
-    public String getUsername() { return username; }
+    public String getUsername() {
+        return user.getEmail();
+    }
 
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
+    @Override public boolean isAccountNonExpired(){ return true; }
+    @Override public boolean isAccountNonLocked(){ return true; }
+    @Override public boolean isCredentialsNonExpired(){ return true; }
+    @Override public boolean isEnabled(){ return true; }
 }
